# HN-upvotes

./: .gitignore  README.md  pyproject.toml
src/project/pred_train/: pred_dataset.py  pred_model.py  pred_train.py
src/project/repr_train/: cbow.py  cbow_inference.py  tokenizer.py  train.py
train/: cbow.py  cbow_inference.py  dummy_main.py  tokenizer.py  w2v_solution.py
