[project]
name = "hn-upvotes"
version = "0.1.0"
description = "HN upvotes project MLX6-week1"
authors = [
    {name = "Nico"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "more-itertools (>=10.6.0,<11.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "wandb (>=0.19.5,<0.20.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
